--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -23,6 +23,21 @@
          </ion-card-content>
        </ion-card>
      </ion-col>
+     <ion-col col-md-3 col-lg-3 col-xs-6 col-sm-6 align-self-center >
+      <ion-card>
+        <ion-col col-12 align-self-center>
+           <img src="../assets/imgs/catalog.png" class="dashboard-icons"/>
+        </ion-col>
+       
+        <ion-card-content>
+          <ion-card-title>
+          <button ion-button block><h2 ion-text color="secondary" text-center (click)="uploadCatalog()">Upload Catalog</h2></button> 
+          </ion-card-title>
+        </ion-card-content>
+      </ion-card>
+    </ion-col>
    </ion-row>
  </ion-grid>
+
+
 </ion-content>
