--- a/src/pages/button-view/button-view.html
+++ b/src/pages/button-view/button-view.html
@@ -7,4 +7,5 @@
 
 
 
-<button ion-button (click)="onClick()" color="secondary">{{value}}</button>
+<button ion-button [ngClass]="value=='FULFILLED'?block:outline" color="secondary" (click)="onClick()" >
+ {{value}}</button>
