--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon> 
     </button>
-    <ion-title>Dashboard</ion-title>
+    <ion-title><ion-icon name="home"></ion-icon>&nbsp; Dashboard</ion-title>
   </ion-navbar>
 </ion-header>
 
