--- a/src/pages/fulfillment-detail/fulfillment-detail.html
+++ b/src/pages/fulfillment-detail/fulfillment-detail.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content no-padding>
+<ion-content padding>
   <ion-card>
     <ion-card-header>
       <ion-row align-items-center>
