--- a/src/pages/fulfillment-detail/fulfillment-detail.html
+++ b/src/pages/fulfillment-detail/fulfillment-detail.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <ion-card>
+  <ion-card class="content-scrolls">
     <ion-card-header>
       <ion-row align-items-center>
         <ion-col col-md-6 col-lg-6 align-self-center class="highlight-card">
