--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -71,6 +71,7 @@
           <div class="header-bar">
               <ion-title ion-text>
                 <ion-icon name="list-box"></ion-icon>&nbsp; Order Detail
+                <button style="float: right" ion-button small round color="secondary" (click)="downloadReport(selectedShopIds)">Download</button>
                 <button style="float: right" ion-button small round color="secondary" (click)="filter()">Filter</button>
               </ion-title>
             </div>
