--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -64,7 +64,7 @@
             <ion-icon name="list-box"></ion-icon>&nbsp; Product Details
             <button style="float: right" ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog()">Upload Catalog</button>
             <button style="float: right" ion-button small round outline color="secondary" [disabled]="!shopSelected" (click)="save()">Save Changes</button>
-            <!-- <button style="float: right" ion-button small round color="secondary" (click)="delete()">Delete</button> -->
+            <button style="float: right" ion-button small round color="secondary" (click)="delete()">Delete All</button>
           </ion-title>
         </div>
     <ion-row id="viewProduct">
