--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -62,10 +62,13 @@
       <div class="header-bar">
           <ion-title ion-text>
             <ion-icon name="list-box"></ion-icon>&nbsp; Product Details
-            <button style="float: right" ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog()">Upload Catalog</button>
+          </ion-title>
+          <br>
+          <button style="float: right" ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog()">Upload Catalog</button>
             <button style="float: right" ion-button small round outline color="secondary" [disabled]="!shopSelected" (click)="save()">Save Changes</button>
             <button style="float: right" ion-button small round color="secondary" (click)="delete()">Delete</button>
-          </ion-title>
+            <button style="float: right" ion-button small round outline color="secondary" (click)="refresh()">Refresh</button>
+          
         </div>
     <ion-row id="viewProduct">
 
