--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -64,14 +64,16 @@
             <ion-icon name="list-box"></ion-icon>&nbsp; Product Details
           </ion-title>
           <br>
-          <button style="float: right" ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog()">Upload Catalog</button>
-            <button style="float: right" ion-button small round outline color="secondary" [disabled]="!shopSelected" (click)="save()">Save Changes</button>
-            <button style="float: right" ion-button small round color="secondary" (click)="delete()">Delete</button>
-            <button style="float: right" ion-button small round outline color="secondary" (click)="refresh()">Refresh</button>
+         
           
         </div>
     <ion-row id="viewProduct">
-
+      <ion-col >
+        <button style="float: right" ion-button small round color="secondary" [disabled]="!shopSelected" (click)="uploadCatalog()">Upload Catalog</button>
+        <button style="float: right" ion-button small round outline color="secondary" [disabled]="!shopSelected" (click)="save()">Save Changes</button>
+        <button style="float: right" ion-button small round color="secondary" (click)="delete()">Delete</button>
+        <button style="float: right" ion-button small round outline color="secondary" (click)="refresh()">Refresh</button>
+      </ion-col>
       <ion-col col-12>
        <p>Showing {{productList.length}} products</p>
       </ion-col>
