--- a/src/pages/fulfillment-detail/fulfillment-detail.html
+++ b/src/pages/fulfillment-detail/fulfillment-detail.html
@@ -13,7 +13,7 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
   <ion-card class="content-scrolls">
     <ion-card-header>
       <ion-row align-items-center>
