--- a/src/pages/catalog/catalog.html
+++ b/src/pages/catalog/catalog.html
@@ -46,7 +46,7 @@
                 </ion-label>
               </ion-item>
             </ion-col>
-            <ion-col>
+            <ion-col col-12>
               <button margin-left ion-button  (click)="viewProduct(shopSelected)" [disabled]="!shopSelected" margin-top>View Product</button>
             </ion-col>
           </ion-row>
