--- a/src/pages/button-view/button-view.html
+++ b/src/pages/button-view/button-view.html
@@ -7,5 +7,5 @@
 
 
 
-<button ion-button [color]="value=='FULFILLED'?'dark':'secondary'" [ngClass]="value=='FULFILLED'?'outline':'block'" [disabled]="value=='FULFILLED' || fulfillmentService.disableFulfillment" (click)="onClick()" >
+<button ion-button [color]="value=='FULFILLED'?'dark':'secondary'"  [disabled]="value=='FULFILLED' || rowData.disable" (click)="onClick()" >
  <b ion-text color="light">{{value}}</b></button>
