new changes-promoion

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,6 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
 
@@ -29,6 +28,9 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="build/assets/css/primeng.min.css" />
+  <link rel="stylesheet" type="text/css" href="build/assets/css/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="build/assets/css/theme.css" />
  
 
 </head>
