--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -39,7 +39,7 @@
     <ion-col col-md-3 col-lg-3 col-xs-6 col-sm-6 align-self-center >
       <ion-card>
         <ion-col col-12 align-self-center>
-           <img src="../assets/imgs/catalog.png" class="dashboard-icons"/>
+           <img src="../assets/imgs/promotion.png" class="dashboard-icons"/>
         </ion-col>
        
         <ion-card-content>
@@ -49,6 +49,19 @@
         </ion-card-content>
       </ion-card>
     </ion-col>
+    <ion-col col-md-3 col-lg-3 col-xs-6 col-sm-6 align-self-center >
+        <ion-card>
+          <ion-col col-12 align-self-center>
+             <img src="../assets/imgs/inventory.png" class="dashboard-icons"/>
+          </ion-col>
+         
+          <ion-card-content>
+            <ion-card-title>
+            <button ion-button block><h2 ion-text color="secondary" text-center (click)="inventory()">Inventory</h2></button> 
+            </ion-card-title>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
    </ion-row>
  </ion-grid>
 
