--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -60,7 +60,7 @@
           <ion-row>
             <ion-col col-12>
               <button ion-button (click)="search([selectedShopId])" [disabled]="!selectedShopId" margin-top>SEARCH</button>
-              <button ion-button outline color="secondary" (click)="reset()" margin-top>RESET</button>
+              <!-- <button ion-button outline color="secondary" (click)="reset()" margin-top>RESET</button> -->
             </ion-col>
           </ion-row>
 
