--- a/src/pages/button-view/button-view.html
+++ b/src/pages/button-view/button-view.html
@@ -6,8 +6,8 @@
 -->
 
 
-<button *ngIf="value!='FULFILLED'" ion-button [color]="value=='FULFILLED'?'dark':'secondary'"  [disabled]="rowData.disable" (click)="onClick()" >
+<button *ngIf="value=='PENDING'" ion-button [color]="value=='FULFILLED'?'dark':'secondary'"  [disabled]="rowData.disable" (click)="onClick()" >
  <b ion-text color="light">{{value}}</b></button>
 
- <button ion-button clear *ngIf="value=='FULFILLED'">
+ <button ion-button clear *ngIf="value!='PENDING'">
   <b ion-text color="dark">{{value}}</b></button>
