--- a/src/pages/deleteconfirmation/deleteconfirmation.html
+++ b/src/pages/deleteconfirmation/deleteconfirmation.html
@@ -28,7 +28,7 @@
 <ion-footer padding>
   <ion-row *ngIf="!catalogProvider.deleteConfirmed">
     <ion-col >
-      <button ion-button block round (click)="close()">SKIP</button>
+      <button ion-button block round (click)="close()">CANCEL</button>
     </ion-col>
     <ion-col >
       <button ion-button block round (click)="delete()">DELETE</button>
