--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,13 @@
   </script>-->
 
   <link href="build/main.css" rel="stylesheet">
+  <link rel="stylesheet" href="build/assets/css/index.css"></link>
+  <link rel="stylesheet" href="build/assets/css/bootstrap.css"></link>
+  <link rel="stylesheet" href="build/assets/css/dark.css"></link>
+  <link rel="stylesheet" href="build/assets/css/material.css"></link>
+<link rel="stylesheet" href="build/assets/css/primeng.min.css"></link>
+<link rel="stylesheet" href="build/assets/css/primeicons.css"/>
+<link rel="stylesheet" href="build/assets/css/theme.css">
 
  
 
