--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -44,7 +44,7 @@
        
         <ion-card-content>
           <ion-card-title>
-          <button ion-button block><h2 ion-text color="secondary" text-center (click)="promotions()">Promotions</h2></button> 
+          <button ion-button block><h2 ion-text color="secondary" text-center (click)="promotions()">Banners</h2></button> 
           </ion-card-title>
         </ion-card-content>
       </ion-card>
@@ -57,7 +57,7 @@
          
           <ion-card-content>
             <ion-card-title>
-            <button ion-button block><h2 ion-text color="secondary" text-center (click)="inventory()">Inventory</h2></button> 
+            <button ion-button block><h2 ion-text color="secondary" text-center (click)="inventory()">Required Stock</h2></button> 
             </ion-card-title>
           </ion-card-content>
         </ion-card>
