--- a/src/pages/inventory/inventory.html
+++ b/src/pages/inventory/inventory.html
@@ -20,29 +20,29 @@
   </div>
   <ion-grid>
     <ion-row>
-        <ion-col col-md-4 col-lg-4 col-sm-12 col-xs-12>
-            <div>
-              <p class="sub-heading" ion-text color="secondary">
-                <ion-icon name="calendar"></ion-icon> &nbsp; Select Date</p>
-            </div>
-            <div class="form-group">
-              <div class="input-group" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event)">
-                <span class="form-control uneditable-input">
-                  {{ daterange.start | date:'dd/MM/yyyy' }} - {{ daterange.end| date:'dd/MM/yyyy' }}
-                </span>
-                <span class="input-group-btn">
-                  <a type="button" class="btn btn-default">
-                    <i class="glyphicon glyphicon-calendar"></i>
-                  </a>
-                </span>
-              </div>
-    
-            </div>
-          </ion-col>
+      <ion-col col-md-4 col-lg-4 col-sm-12 col-xs-12>
+        <div>
+          <p class="sub-heading" ion-text color="secondary">
+            <ion-icon name="calendar"></ion-icon> &nbsp; Select Date</p>
+        </div>
+        <div class="form-group">
+          <div class="input-group" name="daterangeInput" daterangepicker [options]="options" (selected)="selectedDate($event)">
+            <span class="form-control uneditable-input">
+              {{ daterange.start | date:'dd/MM/yyyy' }} - {{ daterange.end| date:'dd/MM/yyyy' }}
+            </span>
+            <span class="input-group-btn">
+              <a type="button" class="btn btn-default">
+                <i class="glyphicon glyphicon-calendar"></i>
+              </a>
+            </span>
+          </div>
+
+        </div>
+      </ion-col>
       <ion-col col-lg-12 col-md-12 col-sm-12 col-xs-12>
         <ion-list radio-group [(ngModel)]="shopSelected">
 
-          <ion-row >
+          <ion-row>
             <ion-col col-lg-6 col-md-6 col-sm-12 *ngFor="let shop of shopList">
               <ion-item>
                 <ion-radio item-start value="{{shop.shopId}}"></ion-radio>
@@ -70,9 +70,32 @@
     </div>
     <ion-row justify-content-center>
       <ion-col align-self-center>
-          <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
+        <ngx-datatable class="bootstrap ngx-datatable fixed-header" [headerHeight]="50" [footerHeight]="50" [rowHeight]="50" [rows]="rows"
+          [columnMode]="'force'" [limit]="10">
+          <ngx-datatable-column name="BarcodeId">
+            <ng-template let-value="value" ngx-datatable-cell-template>
+              {{value}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="SKU">
+            <ng-template let-row="row" let-value="value" ngx-datatable-cell-template>
+              {{value}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Name">
+            <ng-template let-value="value" ngx-datatable-cell-template>
+              {{value}}
+            </ng-template>
+          </ngx-datatable-column>
+          <ngx-datatable-column name="Quantity">
+            <ng-template let-value="value" ngx-datatable-cell-template>
+              {{value}}
+            </ng-template>
+          </ngx-datatable-column>
+        </ngx-datatable>
       </ion-col>
-     
+
     </ion-row>
+
   </ion-grid>
 </ion-content>
