--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,8 @@
 <link rel="stylesheet" href="build/assets/css/primeng.min.css"></link>
 <link rel="stylesheet" href="build/assets/css/primeicons.css"/>
 <link rel="stylesheet" href="build/assets/css/theme.css">
-
+<link rel="stylesheet" href="build/assets/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
  
 
 </head>
