--- a/src/pages/orders/orders.html
+++ b/src/pages/orders/orders.html
@@ -91,11 +91,11 @@
               </div>
             </ng-template>
             <ng-template pTemplate="header" let-columns>
-                <tr>
-                    <th *ngFor="let col of columns" [pSortableColumn]="col.field">
-                        {{col.header}}
-                    </th>
-                </tr>
+              <tr>
+                <th *ngFor="let col of columns" [pSortableColumn]="col.field">
+                  {{col.header}}
+                </th>
+              </tr>
             </ng-template>
             <ng-template pTemplate="body" let-fulfillment>
               <tr>
@@ -103,6 +103,7 @@
                 <td>{{fulfillment.customerName}}</td>
                 <td>{{fulfillment.mobileNumber}}</td>
                 <td>{{fulfillment.deliveryDate | date}}</td>
+                <td>{{fulfillment.payment}}</td>
                 <td>{{fulfillment.slot}}</td>
                 <td>{{fulfillment.city}}</td>
                 <td>
@@ -122,6 +123,7 @@
                       <b ion-text color="dark">{{fulfillment.status}}</b>
                     </button>
                   </td>
+                 
               </tr>
             </ng-template>
           </p-table>
